--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -128,7 +128,7 @@ h6,
   margin-bottom: 1.3rem;
   font-weight: 500;
   line-height: 1.2;
-  text-decoration: underline;
+ 
   color: #005555;
 }
 
@@ -651,7 +651,7 @@ progress {
   left: 40%;
   transform: translate(-50%, -50%);
   z-index: 9999;
-  height: 300px;
+  height: 250px;
 }
 
 .blockquote {
@@ -3638,9 +3638,14 @@ fieldset:disabled .btn {
 }
 
 .btn-secondary:hover {
-  color: #fff;
-  background-color: #004848;
-  border-color: #004444;
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:#9D9D9D; 
+  width: 410px; 
+  height: 30px; 
+  border-radius: 30px;
+  padding: 20px;
+  margin-left: 15px;
 }
 
 .btn-check:focus+.btn-secondary,
@@ -4442,6 +4447,20 @@ fieldset:disabled .btn {
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
+  
+}
+.form-dropdown{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:#9D9D9D; 
+  width: 410px; 
+  height: 30px;
+   border-radius: 30px;
+   padding-bottom: 15px;
+   margin-bottom: -35px;
+   margin-right:45px;
+   text-align: left;
+   font-size: 14px;
 }
 
 .dropdown-menu[data-bs-popper] {
@@ -4718,12 +4737,12 @@ fieldset:disabled .btn {
 
 .dropdown-menu-dark {
   color: #dee2e6;
-  background-color: #343a40;
+  background-color: #dee2e6;
   border-color: rgba(0, 0, 0, 0.15);
 }
 
 .dropdown-menu-dark .dropdown-item {
-  color: #dee2e6;
+  color: #000;
 }
 
 .dropdown-menu-dark .dropdown-item:hover,
@@ -4932,7 +4951,7 @@ fieldset:disabled .btn {
   border: 1px solid transparent;
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
-  width: 80px;
+  width: 100px;
   text-align: center;
 }
 
@@ -14438,7 +14457,7 @@ textarea {
   text-decoration: none !important;
   border-radius: 30px;
   padding-top: 15px;
-  padding-bottom: 25px;
+  padding-bottom: 15px;
   padding-left: 20px;
   padding-right: 20px;
   border-width: 2px;
