--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -16274,3 +16274,139 @@ love.active {
     justify-content: space-between;
     align-items: center;
   }
+
+.modalContent {
+  border: none;
+  box-shadow: 0 2px 6px #ccc;
+  border-radius: 4px;
+  padding: 40px;
+  width: 500px;
+  height: auto;
+  background-color: white;
+  margin: 10% auto;
+}
+.modalContent .btn-secondary{
+  width: 100px; 
+  height: 35px; 
+  background-color: #005555;
+  color: white;
+  border:none; 
+  border-radius: 30px;
+}
+
+.camp-icon {
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.camp-icon i {
+  margin-right: 16px;
+}
+
+.camp-icon label{
+display: block;
+margin-bottom: 0px;
+align-items: center;
+box-sizing: content-box;
+width: 64px;
+}
+
+.camp-icon p{
+margin-bottom: 0px;
+align-items: center;
+}
+
+.more{
+display: flex; 
+justify-content: flex-end; 
+margin-top: 20px; 
+margin-bottom: 32px;
+font-size:14px;
+
+}
+
+.notice{
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background-color: #F0F0F0; 
+  clear: both;
+}
+.notice .list li{
+  font-size: 12px;
+}
+
+.modal-list{
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+margin-top: 32px;
+}
+
+.modal-list input{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:	#9D9D9D; 
+  width: 420px; 
+  height: 45px; 
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+  }
+.modal-list input[type="checkbox"] {
+  background-color: #ffffff; 
+  border-style: solid 1px; 
+  border-color: #a0a0a0; 
+  width: 12px; 
+  height: 12px; 
+  border-radius: 2px;
+  margin-bottom: 0px;
+  margin-right: 8px;
+}
+.modal-list select{
+  background-color:#F0F0F0 ; 
+  border-radius: 10px;
+  border-style: none; 
+  width: 40px; 
+  color: #9D9D9D; 
+  text-align: center;
+}
+.supply{
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+margin-top: 16px;
+margin-bottom: 24px;
+}
+.supply p{
+  box-sizing: content-box;
+  margin-bottom: 0px;
+  width:60px;
+}
+
+.modal-list textarea{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color: #9D9D9D; 
+  width: 420px; 
+  border-radius: 8px;
+  padding: 15px;
+  font-weight: 300;
+  font-size: 12px;
+  margin-bottom: 20px;
+  }
+
+.col-md-4{
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+.btn-icon{
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
