--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -4537,6 +4537,16 @@ button.close {
   .modal-footer > :not(:last-child) {
     margin-right: .25rem; }
 
+.modal-footer .btn-secondary{
+width: 90px; 
+height: 35px; 
+background-color: #005555;
+color: white;
+border:none; 
+border-radius: 30px;
+
+}
+
 .modal-scrollbar-measure {
   position: absolute;
   top: -9999px;
@@ -9373,60 +9383,96 @@ textarea.form-control {
   #hero-nav .next {
     right: 20px; }
   
-.site-footer {
-  background: #efefef;
-  font-size: 14px;
-  color: #888;
-  padding: 70px 0; }
-  .site-footer a {
-    color: #777;
-    position: relative;
-    display: inline-block;
-    text-decoration: underline; }
+    .site-footer {
+      background: #efefef;
+      font-size: 14px;
+      color: #888;
+      padding: 70px 0;
+    }
+    
+    .site-footer a {
+      color: #777;
+      position: relative;
+      display: inline-block;
+      text-decoration: underline;
+    }
+    
     .site-footer a:hover {
       color: #000;
-      text-decoration: none; }
-      .site-footer a:hover:before {
-        background: #00204a; }
-  .site-footer .footer-cta h2, .site-footer .footer-cta .h2 {
-    font-size: 30px;
-    color: #00204a; }
-  .site-footer .btn:before {
-    display: none; }
-  .site-footer .widget {
-    margin-bottom: 40px!important;;
-    display: block  }
-    .site-footer .widget h3, .site-footer .widget .h3 {
+      text-decoration: none;
+    }
+    
+    .site-footer a:hover:before {
+      background: #00204a;
+    }
+    
+    .site-footer .footer-cta h2,
+    .site-footer .footer-cta .h2 {
+      font-size: 30px;
+      color: #00204a;
+    }
+    
+    .site-footer .btn:before {
+      display: none;
+    }
+    
+    .site-footer .widget {
+      margin-bottom: 40px !important;
+      ;
+      display: block
+    }
+    
+    .site-footer .widget h3,
+    .site-footer .widget .h3 {
       font-size: 12px;
       font-weight: 700;
       text-transform: uppercase;
       margin-bottom: 15px;
-      color: #00204a; }
+      color: #00204a;
+    }
+    
     .site-footer .widget .links {
-      width: 150px; }
-      .site-footer .widget .links li {
-        margin-bottom: 10px; }
-  .site-footer .social li {
-    display: inline-block; }
+      width: 150px;
+    }
+    
+    .site-footer .widget .links li {
+      margin-bottom: 10px;
+    }
+    
+    .site-footer .social li {
+      display: inline-block;
+    }
+    
     .site-footer .social li a {
       display: inline-block;
       width: 40px;
       height: 40px;
       position: relative;
       background: #ccc;
-      border-radius: 40%; }
-      .site-footer .social li a:before {
-        display: none; }
-      .site-footer .social li a > span {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%); }
-      .site-footer .social li a:hover {
-        background: #00204a;
-        color: #fff; }
+      border-radius: 40%;
+    }
+    
+    .site-footer .social li a:before {
+      display: none;
+    }
+    
+    .site-footer .social li a>span {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+    }
+    
+    .site-footer .social li a:hover {
+      background: #00204a;
+      color: #fff;
+    }
+    
+    .float-start {
+      float: left !important;
+    }
 .float-start {
   float: left !important; }
 
@@ -9883,4 +9929,590 @@ font-size: 14px;
 .article-footer-div p{
   margin-bottom: 0px;
   font-size: 14px;
+}
+
+.box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.box-mod {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.box-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 32px;
+}
+
+.box-side h6{
+  font-size: 14px;
+  margin-bottom: 0px;
+}
+.box-side i{
+  margin-right: 5px;
+}
+.box-side p{
+font-size: smaller;
+margin-top: 0px;
+margin-bottom: 0px;
+}
+.box-side .btn-side{
+  display: block;
+  width: 100%; 
+  height: 36px; 
+  background-color: #525f58;
+  color: white; 
+  border:none; 
+  border-radius: 5px;
+}
+
+.text {
+  flex: 1;
+}
+
+.icon {
+  content: url("fa-solid fa-child-dress");
+  margin-left: 30px;
+}
+
+.modalContent {
+  border: none;
+  box-shadow: 0 2px 6px #ccc;
+  border-radius: 4px;
+  padding: 40px;
+  width: 500px;
+  height: auto;
+  background-color: white;
+  margin: 10% auto;
+}
+.modalContent .btn-secondary{
+  width: 100px; 
+  height: 35px; 
+  background-color: #005555;
+  color: white;
+  border:none; 
+  border-radius: 30px;
+}
+
+.camp-icon {
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.camp-icon i {
+  margin-right: 16px;
+}
+
+.camp-icon label{
+display: block;
+margin-bottom: 0px;
+align-items: center;
+box-sizing: content-box;
+width: 64px;
+}
+
+.camp-icon p{
+margin-bottom: 0px;
+align-items: center;
+}
+
+.modal-list{
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+margin-top: 32px;
+}
+
+.modal-list input{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:	#9D9D9D; 
+  width: 420px; 
+  height: 45px; 
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+  }
+.modal-list input[type="checkbox"] {
+  background-color: #ffffff; 
+  border-style: solid 1px; 
+  border-color: #a0a0a0; 
+  width: 12px; 
+  height: 12px; 
+  border-radius: 2px;
+  margin-bottom: 0px;
+  margin-right: 8px;
+}
+.modal-list input[type="file"]{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:	#9D9D9D; 
+  width: 100%; 
+  height: 150px; 
+  border-radius: 4px;
+  padding: 20px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-weight: 300;
+  font-size: 12px;
+
+}
+.modal-list select{
+  
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #9D9D9D;
+  width: 100%;
+  height: 43px;
+  border-radius: 35px;
+  padding-left: 15px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+  padding-top:10px
+  padding-bottom: 10px;
+  padding-right: 15px;
+}
+.supply{
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+margin-top: 16px;
+margin-bottom: 24px;
+}
+.supply p{
+  box-sizing: content-box;
+  margin-bottom: 0px;
+  width:60px;
+}
+
+.modal-list textarea{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color: #9D9D9D; 
+  width: 420px; 
+  border-radius: 8px;
+  padding: 15px;
+  font-weight: 300;
+  font-size: 12px;
+  margin-bottom: 20px;
+  }
+
+.modal-list textarea.lg{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color: #9D9D9D; 
+  width: 733px; 
+  border-radius: 8px;
+  padding: 15px;
+  font-weight: 300;
+  font-size: 12px;
+  margin-bottom: 20px;
+  }
+.col-md-4{
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+.btn-icon{
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+.file-upload {
+  display: block;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: #555;
+  border: 2px dashed #ccc;
+  padding: 20px;
+  cursor: pointer;
+  margin: 20px auto;
+  max-width: 500px;
+  
+}
+
+
+.file-upload .file-upload-preview {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.file-upload .file-upload-preview img {
+  max-width: 100%;
+  max-height: 200px;
+  margin-top: 10px;
+}
+.col-md-6 input{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:	#9D9D9D; 
+  width: 100%; 
+  height: 45px; 
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.more{
+  display: flex; 
+  justify-content: flex-end; 
+  margin-top: 20px; 
+  margin-bottom: 32px;
+  font-size:14px;
+  
+  }
+  
+  .notice{
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    background-color: #F0F0F0; 
+    clear: both;
+  }
+  .notice .list li{
+    font-size: 12px;
+  }
+
+  .supply{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 16px;
+  margin-bottom: 24px;
+  }
+  .supply p{
+    box-sizing: content-box;
+    margin-bottom: 0px;
+    width:60px;
+  }
+
+  .col-md-4{
+    display: flex;
+    align-items: center;
+    margin-bottom: 12px;
+  }
+  .btn-icon{
+    background-color: transparent;
+    border: none;
+    outline: none;
+  }
+  .contact-section .contact-info p a {
+  color: #1a1a1a;
+}
+
+.contact-section .info {
+  width: 100%;
+}
+
+.contact-section .contact-form {
+  width: 100%;
+}
+
+.block-9 .form-control {
+  outline: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  font-size: 15px;
+}
+
+.block-21 .blog-img {
+  display: block;
+  height: 80px;
+  width: 80px;
+}
+
+.block-21 .text {
+  width: calc(100% - 100px);
+}
+
+.block-21 .text .heading {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.block-21 .text .heading a {
+  color: #000000;
+}
+
+.block-21 .text .heading a:hover,
+.block-21 .text .heading a:active,
+.block-21 .text .heading a:focus {
+  color: #8d703b;
+}
+
+.block-21 .text .meta>div {
+  display: inline-block;
+  font-size: 12px;
+  margin-right: 5px;
+}
+
+.block-21 .text .meta>div a {
+  color: gray;
+}
+.tagcloud a {
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 4px 10px;
+  margin-bottom: 7px;
+  margin-right: 4px;
+  border-radius: 4px;
+  color: #000000;
+  border: 1px solid #ccc;
+  font-size: 11px;
+}
+
+.tagcloud a:hover {
+  border: 1px solid #000;
+}
+
+.comment-form-wrap {
+  clear: both;
+}
+
+.comment-list {
+  padding: 0;
+  margin: 0;
+}
+
+.comment-list .children {
+  padding: 50px 0 0 40px;
+  margin: 0;
+  float: left;
+  width: 100%;
+}
+
+.comment-list li {
+  padding: 0;
+  margin: 0 0 30px 0;
+  float: left;
+  width: 100%;
+  clear: both;
+  list-style: none;
+}
+
+.comment-list li .vcard {
+  width: 80px;
+  float: left;
+}
+
+.comment-list li .vcard img {
+  width: 50px;
+  border-radius: 50%;
+}
+
+.comment-list li .comment-body {
+  float: right;
+  width: calc(100% - 80px);
+}
+
+.comment-list li .comment-body h3 {
+  font-size: 20px;
+}
+
+.comment-list li .comment-body .meta {
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: .1em;
+  color: #ccc;
+}
+
+.comment-list li .comment-body .reply {
+  padding: 5px 10px;
+  background: #e6e6e6;
+  color: #000000;
+  text-transform: uppercase;
+  font-size: 11px;
+  letter-spacing: .1em;
+  font-weight: 400;
+  border-radius: 4px;
+}
+
+.comment-list li .comment-body .reply:hover {
+  color: #fff;
+  background: black;
+}
+
+.search-form {
+  background: #f2f2f2;
+  padding: 10px;
+}
+
+.search-form .form-group {
+  position: relative;
+}
+
+.search-form .form-group input {
+  padding-right: 50px;
+}
+
+.search-form .icon {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.block-16 figure {
+  position: relative;
+}
+
+.block-16 figure .play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 40px;
+  width: 90px;
+  height: 90px;
+  background: #fff;
+  display: block;
+  border-radius: 50%;
+  opacity: .7;
+}
+
+.block-16 figure .play-button:hover {
+  opacity: 1;
+}
+
+.block-16 figure .play-button>span {
+  position: absolute;
+  left: 55%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.block-16 .day{
+  background-color: #005555; 
+  width: 110px; 
+  height: 35px; 
+  border-radius: 3px; 
+  float: left;
+}
+.block-16 .day p{
+  color: white; 
+  text-align: center; 
+  line-height: 35px; 
+  font-weight:bold;
+}
+.block-16 .spot{
+display: flex;
+justify-content: space-between;
+align-items: center;
+background-color: rgba(0, 85, 85, 0.07); 
+width: 705px; 
+height: 35px; 
+border-radius: 3px; 
+float: left; 
+padding: 15px;
+}
+.block-16 .spot p{
+color: black; 
+text-align: left; 
+line-height: 8px; 
+font-weight:bold;
+margin-bottom: 0px;
+}
+.block-16 .spot i{
+  display: flex;
+  justify-content: flex-end;
+}
+.block-6 .media-body p {
+  font-size: 16px;
+}
+.blog-entry .text {
+  position: relative;
+  border-top: 0;
+  border-radius: 2px;
+}
+
+.blog-entry .text .tag {
+  color: #b3b3b3;
+}
+
+.blog-entry .text .heading {
+  font-size: 20px;
+  margin-bottom: 16px;
+}
+
+.blog-entry .text .heading a {
+  color: #000000;
+}
+
+.blog-entry .text .heading a:hover,
+.blog-entry .text .heading a:focus,
+.blog-entry .text .heading a:active {
+  color: #8d703b;
+}
+
+.blog-entry .text .meta-chat {
+  color: #b3b3b3;
+}
+
+.blog-entry .text .read {
+  color: #000000;
+  font-size: 14px;
+}
+
+.blog-entry .meta>div {
+  display: inline-block;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  font-size: 15px;
+}
+
+.blog-entry .meta>div a {
+  color: #b3b3b3;
+  font-size: 15px;
+}
+
+.blog-entry .meta>div a:hover {
+  color: #cccccc;
+}
+
+.block-23 ul {
+  padding: 0;
+}
+
+.block-23 ul li,
+.block-23 ul li>a {
+  display: table;
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+.block-23 ul li span {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.block-23 ul li .icon,
+.block-23 ul li .text {
+  display: table-cell;
+  vertical-align: top;
+}
+
+.block-23 ul li .icon {
+  width: 40px;
+  font-size: 18px;
+  padding-top: 2px;
+  color: white;
 }
