--- a/deluxe-master/css/css/css/style.css
+++ b/deluxe-master/css/css/css/style.css
@@ -16688,9 +16688,10 @@ love.active {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 250px;
+    height: 180px;
     position: relative;
-    display: block; }
+    display: block;
+    width: 200px; }
 
     .infoModal {
       display: none;
@@ -16840,3 +16841,37 @@ border-radius: 30px;
   border: none;
   border-radius: 30px;
 }
+
+.details a{
+  color:#00204a;
+}
+
+.blog-entry .text {
+  position: relative;
+  border-top: 0;
+  border-radius: 2px; }
+  .blog-entry .text .tag {
+    color: #b3b3b3; }
+  .blog-entry .text .heading {
+    font-size: 20px;
+    margin-bottom: 16px; }
+    .blog-entry .text .heading a {
+      color: #000000; }
+      .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
+        color: #8d703b; }
+  .blog-entry .text .meta-chat {
+    color: #b3b3b3; }
+  .blog-entry .text .read {
+    color: #000000;
+    font-size: 14px; }
+
+.blog-entry .meta > div {
+  display: inline-block;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  font-size: 15px; }
+  .blog-entry .meta > div a {
+    color: #b3b3b3;
+    font-size: 15px; }
+    .blog-entry .meta > div a:hover {
+      color: #cccccc; }
