--- a/deluxe-master/property-1.0.0/css/style.css
+++ b/deluxe-master/property-1.0.0/css/style.css
@@ -508,10 +508,8 @@ progress {
     content: "\2014\00A0"; }
 
 .img-fluid {
-  /*max-width: 100%;
-  height: auto;*/
-  width: 412px;
-  height: 412px;
+  max-width: 100%;
+  height: auto;
  }
 
 .img-fluid .icon-heart:before{
